presskit logo update

--- a/presskit.html
+++ b/presskit.html
@@ -171,7 +171,7 @@
 			<div class='clear'></div>
 			<h2>Logo</h2>
 			<div class='clear'></div>
-			<img src="Presskit/Logo.png" width=100%>
+			<img src="Images/Logo.png" width=100%>
 			<div class='clear'></div>
 			<div class='clear'></div>
 			<div class='clear'></div>
