setting game to release

--- a/index.html
+++ b/index.html
@@ -36,11 +36,6 @@
 				<li>
 
 				<li><a href='https://twitter.com/studioeggroll' title='twitter' target="_blank">twitter</a></li>
-				<!-- <li>
-					<a href='https://twitter.com/studioeggroll' title='twitter' target="_blank">
-					<img src="icons/twitter.png" width="30">
-				</a>
-				</li> -->
 			</ul>
 		</div>
 	</nav>
@@ -72,8 +67,8 @@
 		<div class='clear'></div>
 		<div class="twelve columns">
 			<h3>A dark fantasy action adventure where you unbury a tale of intimacy and violence in order to cleanse a demonic infestation from a once-beautiful land.</h3>
-			<h3>Coming November 2nd 2018 for PC + Mac + Linux.</h3>
-			<h3>Play the free demo now:</h3>
+			<h3>Download the soundtrack <a href='https://juliebuchanan.bandcamp.com/album/the-other-half-ost' target="_blank">here</a></h3>
+			<h3>Game is available now on PC + Mac + Linux:</h3>
 		</div>
 
 	</div>
@@ -84,7 +79,7 @@
 		<iframe frameborder="0" src="https://itch.io/embed/288480?bg_color=222222&amp;fg_color=e0e5e5&amp;link_color=e0e5e5&amp;border_color=363636"
 		 width="646" height="200"></iframe>
 		<div class='clear'></div>
-		<iframe src="https://widgets.gamejolt.com/package/v1?key=hfvkwCd5" frameborder="0" width="646" height="200"></iframe>
+		<iframe src="https://widgets.gamejolt.com/package/v1?key=hYoaiGGG" frameborder="0" width="646" height="246"></iframe>
 
 		<div class='clear'></div>
 		<div class='clear'></div>
