adding links to team members

--- a/presskit.html
+++ b/presskit.html
@@ -204,12 +204,21 @@
 			<div class='clear'></div>
 			<h4>Fred Yang</h4>
 			<h6>Designer, writer, programmer and artist.</h6>
+			<h6><a href='https://twitter.com/studioeggroll' title='twitter' target="_blank">twitter</a></h6>
 			<div class='clear'></div>
 			<h4>Julie Buchanan</h4>
 			<h6>Composer and sound designer. Julie got her B.Mus from Berklee College of Music in 2014 and has been making cool sounds for indie games ever since.</h6>
+
+			<h6><a href='http://www.juliebuchanan.com/' title='website' target="_blank">website</a></h6>
+			<h6><a href='https://twitter.com/jbuaudio' title='twitter' target="_blank">twitter</a></h6>
+			<h6><a href='https://juliebuchanan.bandcamp.com/releases' title='bandcamp' target="_blank">bandcamp</a></h6>
+
 			<div class='clear'></div>
 			<h4>Maryyann Landlord</h4>
 			<h6>Artist. She is pursuing her MFA at USC in Animation. Her focus is in animation, 3D asset creation and interaction design.</h6>
+
+			<h6><a href='http://www.maryyann.com/' title='website' target="_blank">website</a></h6>
+			<h6><a href='https://www.linkedin.com/in/maryyannlandlord/' title='linkedin' target="_blank">linkedin</a></h6>
 		</div>
 	</div>
 
