adding voice actors to the team in presskit

--- a/presskit.html
+++ b/presskit.html
@@ -219,6 +219,26 @@
 
 			<h6><a href='http://www.maryyann.com/' title='website' target="_blank">website</a></h6>
 			<h6><a href='https://www.linkedin.com/in/maryyannlandlord/' title='linkedin' target="_blank">linkedin</a></h6>
+
+			<div class='clear'></div>
+			<h4>Ben Shuman</h4>
+			<h6>Voice of Daniel / demons / Barnes / townspeople</h6>
+			<h6><a href='https://twitter.com/BenShumanVO' title='twitter' target="_blank">twitter</a></h6>
+			<div class='clear'></div>
+
+			<h4>Atley Loughridge</h4>
+			<h6>Voice of Annalise / townspeople</h6>
+			<h6><a href='https://twitter.com/ATL3Y' title='twitter' target="_blank">twitter</a></h6>
+			<div class='clear'></div>
+
+			<h4>Patrick Peterson</h4>
+			<h6>Voice of Carleton / townspeople</h6>
+			<div class='clear'></div>
+
+			<h4>Miles Flanagan</h4>
+			<h6>Voice of demons</h6>
+			<h6><a href='https://twitter.com/bespoke_farts' title='twitter' target="_blank">twitter</a></h6>
+			<div class='clear'></div>
 		</div>
 	</div>
 
