--- a/index.html
+++ b/index.html
@@ -193,14 +193,12 @@
 	</div>
 
 	<!-- Announcement list -->
-	<div class='container'>
+	<!-- <div class='container'>
 		<h6 align="center">announcement list</h6>
-		<!-- Begin MailChimp Signup Form -->
 		<div id="mc_embed_signup">
 			<form action="https://theotherhalfgame.us18.list-manage.com/subscribe/post?u=13ce8b6f60090c8395acd2a2d&amp;id=abb3b93b32" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 				<div id="mc_embed_signup_scroll">
 					<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email@address.com" required>
-					<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 					<div style="position: absolute; left: -5000px;" aria-hidden="true">
 						<input type="text" name="b_13ce8b6f60090c8395acd2a2d_abb3b93b32" tabindex="-1" value="">
 					</div>
@@ -213,7 +211,7 @@
 		<div class='clear'></div>
 		<div class='clear'></div>
 		<div class='clear'></div>
-	</div>
+	</div> -->
 	<!--End mc_embed_signup-->
 
 
